jenkins/jenkins-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jenkins.wastedbits.org
    http:
      paths:
      - backend:
          serviceName: jenkins-jenkins
          servicePort: 8080
